--- a/src/app/features/category/category-update/category-update.component.html
+++ b/src/app/features/category/category-update/category-update.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="mt-3">Update Category</h1>
+    <h1 class="mt-3">Sửa</h1>
     <form #form="ngForm"  (ngSubmit)="onFormSubmit()">
         <div class="mt-2">
             <div class="mt-3">
@@ -11,7 +11,7 @@
                 <input type="text" id="categoryHandel" name="categoryHandel" [(ngModel)]="model.urlHandle" class="form-control">
             </div>
             <div class="mt-3">
-                <button class="btn btn-primary" type="submit"> Supmit</button>
+                <button class="btn btn-primary" type="submit">Lưu</button>
             </div>
         </div>
     </form>
