--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <input type="text" formControlName="username" placeholder="Username">
     <input type="password" formControlName="password" placeholder="Password">
-    <button type="submit" [disabled]="!loginForm.valid">Login</button>
+    <button type="submit" [disabled]="!loginForm.valid">Dâng nhap</button>
   </form>
   
