--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,6 @@
-<p>home works!</p>
-<p-button label="sign out" (onClick)="logout()"></p-button>
+<div style="display: flex">
+  <app-navbar style="flex: 1"></app-navbar>
+  <div style="flex: 5">
+    <p>Home</p>
+  </div>
+</div>
