--- a/src/app/components/Management_Teacher/teacher/teacher.component.html
+++ b/src/app/components/Management_Teacher/teacher/teacher.component.html
@@ -1,45 +1,62 @@
 <div style="display: flex">
-    <app-navbar style="flex: 1"></app-navbar>
-    <div style="flex: 5">
-        <app-header></app-header>
-        <div class="card">
-        
-            <h1 class="titel">Quản lý giảng viên</h1>
-            
-            <p-toast></p-toast>
-            <p-confirmDialog></p-confirmDialog>
-            <div class="container d-flex justify-content-between " style="width: 100%;">
-                <input pInputText type="text" placeholder="Nhập tên sinh viên" style="margin-right: 50px;" />
-              <a href="formaddTeacher">  <button pButton type="button" label="Thêm giảng viên" icon="pi pi-plus" class="p-mt-3" ></button></a>
-            </div>
-          
-            <p-table [value]="teachers" [paginator]="true" [rows]="10" [responsive]="true">
-              <ng-template pTemplate="header">
-                <tr>
-                  <th>Mã giảng viên</th>
-                  <th>Tên giảng viên</th>
-                  <th>Email</th>
-                  <th>SDT</th>
-                  <th>Thao tác</th>
-                </tr>
-              </ng-template>
-              <ng-template pTemplate="body" let-teacher>
-                <tr>
-                  <td>{{teacher.code}}</td>
-                  <td>{{teacher.fullName}}</td>
-                  <td>{{teacher.email}}</td>
-                  <td>{{teacher.phone}}</td>
-                  <td>
-                    <button pButton  class="p-button  p-mr-2" (click)="edit(teacher)">Sửa</button>
-                    <button pButton  class="p-button " (click)="delete(teacher.id)">Xóa</button>
-                    <button pButton  class="p-button " (click)="delete(teacher)">Thêm môn học</button>
-                  </td>
-                </tr>
-              </ng-template>
-            </p-table>
-           
-            
-            
-          </div>
+  <app-navbar style="flex: 1"></app-navbar>
+  <div style="flex: 5">
+    <app-header></app-header>
+    <div class="card">
+      <h1 class="titel">Quản lý giảng viên</h1>
+
+      <p-toast></p-toast>
+      <p-confirmDialog></p-confirmDialog>
+      <div class="container d-flex justify-content-between" style="width: 100%">
+        <input
+          pInputText
+          type="text"
+          placeholder="Nhập tên sinh viên"
+          style="margin-right: 50px"
+        />
+        <a href="formaddTeacher">
+          <button
+            pButton
+            type="button"
+            label="Thêm giảng viên"
+            icon="pi pi-plus"
+            class="p-mt-3"
+          ></button
+        ></a>
+      </div>
+
+      <p-table
+        [value]="teachers"
+        [paginator]="true"
+        [rows]="10"
+        [responsive]="true"
+      >
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Mã giảng viên</th>
+            <th>Tên giảng viên</th>
+            <th>Email</th>
+            <th>SDT</th>
+            <th>Thao tác</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-teacher>
+          <tr>
+            <td>{{ teacher.code }}</td>
+            <td>{{ teacher.fullName }}</td>
+            <td>{{ teacher.email }}</td>
+            <td>{{ teacher.phone }}</td>
+            <td>
+              <button pButton class="p-button p-mr-2" (click)="edit(teacher)">
+                Sửa
+              </button>
+              <button pButton class="p-button" (click)="delete(teacher.id)">
+                Xóa
+              </button>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
     </div>
   </div>
+</div>
