--- a/src/app/components/class/class.component.html
+++ b/src/app/components/class/class.component.html
@@ -1,105 +1,185 @@
 <div style="display: flex">
-    <app-navbar style="flex: 1"></app-navbar>
-    <div style="flex: 5">
-        <app-header></app-header>
-        <div class="card">
-        
-            <h1 class="titel">Quản lý lớp học</h1>
-            
-            <p-toast></p-toast>
-            <p-confirmDialog></p-confirmDialog>
-            <div class="container d-flex justify-content-between " style="width: 100%;">
-                <input pInputText type="text" placeholder="Nhập tên môn học" style="margin-right: 50px;" />
-                <button pButton type="button" label="Thêm lớp học" icon="pi pi-plus" class="p-mt-3" ></button>
+  <app-navbar style="flex: 1"></app-navbar>
+  <div style="flex: 5">
+    <app-header></app-header>
+    <div class="card">
+      <h1 class="titel">Quản lý lớp học</h1>
+
+      <p-toast></p-toast>
+      <p-confirmDialog></p-confirmDialog>
+      <div class="container d-flex justify-content-between" style="width: 100%">
+        <input
+          pInputText
+          type="text"
+          placeholder="Nhập tên môn học"
+          style="margin-right: 50px"
+        />
+        <button
+          pButton
+          type="button"
+          label="Thêm lớp học"
+          icon="pi pi-plus"
+          class="p-mt-3"
+        ></button>
+      </div>
+
+      <p-table
+        [value]="schoolClasss"
+        [paginator]="true"
+        [rows]="10"
+        [responsive]="true"
+      >
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Mã lớp</th>
+            <th>Sỹ số</th>
+            <th>Tối đa</th>
+            <th>GV chủ nhiệm</th>
+            <th>Chuyên ngành</th>
+            <th>Thao tác</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-schoolClass>
+          <tr>
+            <td>{{ schoolClass.code }}</td>
+            <td>{{ schoolClass.studentCount }}</td>
+            <td>{{ schoolClass.maxStudents }}</td>
+            <td>{{ schoolClass.homeroomTeacherName }}</td>
+            <td>{{ schoolClass.majorName }}</td>
+            <td>
+              <button pButton class="p-button">Sửa</button>
+              <button pButton class="p-button">Xóa</button>
+              <button
+                pButton
+                class="p-button"
+                (click)="showDialogToAdd(schoolClass.id)"
+              >
+                Thêm Sinh Viên
+              </button>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+
+      <p-dialog
+        [(visible)]="displayDialog"
+        [style]="{ width: '1000px' }"
+        class="d-flex"
+        header="Quản lý sinh viên trong lớp"
+        [modal]="true"
+        styleClass="p-fluid"
+      >
+        <ng-template pTemplate="content">
+          <div class="p-grid d-flex">
+            <div class="p-col-6">
+              <h3>Danh sách tất cả sinh viên</h3>
+              <div class="p-inputgroup">
+                <input
+                  pInputText
+                  type="text"
+                  placeholder="Tìm kiếm sinh viên"
+                  [(ngModel)]="searchAllStudents"
+                />
+                <button
+                  pButton
+                  icon="pi pi-search"
+                  class="p-button-outlined"
+                  (click)="searchAllStudentsFn()"
+                ></button>
+              </div>
+              <p-table
+                [value]="ListStudent"
+                [paginator]="true"
+                [rows]="5"
+                selectionMode="single"
+                [(selection)]="selectedStudent"
+              >
+                <ng-template pTemplate="header">
+                  <tr>
+                    <th>Mã SV</th>
+                    <th>Họ tên</th>
+                    <th>Hành động</th>
+                  </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-student>
+                  <tr>
+                    <td>{{ student.id }}</td>
+                    <td>{{ student.fullName }}</td>
+                    <td>
+                      <button
+                        pButton
+                        label="Thêm"
+                        icon="pi pi-plus"
+                        class="p-button-success"
+                        (click)="addStudentToClass(student.id)"
+                      ></button>
+                    </td>
+                  </tr>
+                </ng-template>
+              </p-table>
             </div>
-          
-            <p-table [value]="schoolClasss" [paginator]="true" [rows]="10" [responsive]="true">
-              <ng-template pTemplate="header">
-                <tr>
-                  <th>Mã lớp</th>
-                  <th>Số vị trí</th>
-                  <th>Số sinh viên lớn nhất</th>
-                  <th>Tên chuyên ngành</th>
-                  <th>Thao tác</th>
-                </tr>
-              </ng-template>
-              <ng-template pTemplate="body" let-schoolClass>
-                <tr>
-                  <td>{{schoolClass.code}}</td>
-                  <td>{{schoolClass.availableSlots}}</td>
-                  <td>{{schoolClass.maxStudents}}</td>
-                  <td>{{schoolClass.majorName}}</td>
-                  <td >
-                    <button pButton  class="p-button  " >Sửa</button>
-                    <button pButton  class="p-button " >Xóa</button>
-                    <button pButton  class="p-button " (click)="showDialogToAdd(schoolClass.id)">Thêm Sinh Viên</button>
-                  </td>
-                </tr>
-              </ng-template>
-            </p-table>
-           
-            <p-dialog [(visible)]="displayDialog" [style]="{width: '1000px'}" class="d-flex" header="Quản lý sinh viên trong lớp" [modal]="true" styleClass="p-fluid">
-                <ng-template pTemplate="content">
-                  <div class="p-grid d-flex">
-                    <div class="p-col-6">
-                      <h3>Danh sách tất cả sinh viên</h3>
-                      <div class="p-inputgroup">
-                        <input pInputText type="text" placeholder="Tìm kiếm sinh viên" [(ngModel)]="searchAllStudents" />
-                        <button pButton icon="pi pi-search" class="p-button-outlined" (click)="searchAllStudentsFn()"></button>
-                      </div>
-                      <p-table [value]="ListStudent" [paginator]="true" [rows]="5" selectionMode="single" [(selection)]="selectedStudent">
-                        <ng-template pTemplate="header">
-                          <tr>
-                            <th>Mã SV</th>
-                            <th>Họ tên</th>
-                            <th>Hành động</th>
-                          </tr>
-                        </ng-template>
-                        <ng-template pTemplate="body" let-student>
-                          <tr>
-                            <td>{{ student.id }}</td>
-                            <td>{{ student.fullName }}</td>
-                            <td>
-                              <button pButton label="Thêm" icon="pi pi-plus" class="p-button-success" (click)="addStudentToClass(student.id)"></button>
-                            </td>
-                          </tr>
-                        </ng-template>
-                      </p-table>
-                    </div>
-              
-                    <div class="p-col-6">
-                      <h3>Sinh viên trong lớp</h3>
-                      <div class="p-inputgroup">
-                        <input pInputText type="text" placeholder="Tìm kiếm sinh viên" [(ngModel)]="searchClassStudents" />
-                        <button pButton icon="pi pi-search" class="p-button-outlined" (click)="searchClassStudentsFn()"></button>
-                      </div>
-                      <p-table [value]="Student_Class" [paginator]="true" [rows]="5" selectionMode="single" [(selection)]="selectedClassStudent">
-                        <ng-template pTemplate="header">
-                          <tr>
-                            <th>Mã SV</th>
-                            <th>Họ tên</th>
-                            <th>Hành động</th>
-                          </tr>
-                        </ng-template>
-                        <ng-template pTemplate="body" let-student>
-                          <tr>
-                            <td>{{ student.id }}</td>
-                            <td>{{ student.fullName }}</td>
-                            <td>
-                              <button pButton label="Xóa" icon="pi pi-times" class="p-button-danger" (click)="removeStudentFromClass(student.id)"></button>
-                            </td>
-                          </tr>
-                        </ng-template>
-                      </p-table>
-                    </div>
-                  </div>
+
+            <div class="p-col-6">
+              <h3>Sinh viên trong lớp</h3>
+              <div class="p-inputgroup">
+                <input
+                  pInputText
+                  type="text"
+                  placeholder="Tìm kiếm sinh viên"
+                  [(ngModel)]="searchClassStudents"
+                />
+                <button
+                  pButton
+                  icon="pi pi-search"
+                  class="p-button-outlined"
+                  (click)="searchClassStudentsFn()"
+                ></button>
+              </div>
+              <p-table
+                [value]="Student_Class"
+                [paginator]="true"
+                [rows]="5"
+                selectionMode="single"
+                [(selection)]="selectedClassStudent"
+              >
+                <ng-template pTemplate="header">
+                  <tr>
+                    <th>Mã SV</th>
+                    <th>Họ tên</th>
+                    <th>Hành động</th>
+                  </tr>
                 </ng-template>
-              
-                <ng-template pTemplate="footer">
-                  <button pButton pRipple label="Đóng" icon="pi pi-times" class="p-button-text" (click)="displayDialog=false"></button>
+                <ng-template pTemplate="body" let-student>
+                  <tr>
+                    <td>{{ student.id }}</td>
+                    <td>{{ student.fullName }}</td>
+                    <td>
+                      <button
+                        pButton
+                        label="Xóa"
+                        icon="pi pi-times"
+                        class="p-button-danger"
+                        (click)="removeStudentFromClass(student.id)"
+                      ></button>
+                    </td>
+                  </tr>
                 </ng-template>
-              </p-dialog>
-              
+              </p-table>
+            </div>
           </div>
+        </ng-template>
+
+        <ng-template pTemplate="footer">
+          <button
+            pButton
+            pRipple
+            label="Đóng"
+            icon="pi pi-times"
+            class="p-button-text"
+            (click)="displayDialog = false"
+          ></button>
+        </ng-template>
+      </p-dialog>
     </div>
   </div>
+</div>
