--- a/src/app/components/learningoutcomes/learningoutcomes.component.html
+++ b/src/app/components/learningoutcomes/learningoutcomes.component.html
@@ -19,6 +19,7 @@
             optionLabel="code"
             optionValue="id"
             [style]="{ width: '100%' }"
+            (onChange)="searchSubject($event)"
           ></p-dropdown>
         </div>
         <div class="p-field" style="flex: 1">
