--- a/src/app/components/Management_Teacher/add-teacher/add-teacher.component.html
+++ b/src/app/components/Management_Teacher/add-teacher/add-teacher.component.html
@@ -62,6 +62,8 @@
               'max-width': '500px',
               'margin-bottom': '10px'
             }"
+            (onChange)="onFacultyChange($event)"
+
           ></p-dropdown>
         </div>
       </div>
