--- a/src/app/components/class/class.component.html
+++ b/src/app/components/class/class.component.html
@@ -52,9 +52,9 @@
               <button
                 pButton
                 class="p-button"
-                (click)="showDialogToAdd(schoolClass.id)"
+                (click)="showDialogToAdd(schoolClass)"
               >
-                Thêm Sinh Viên
+                Chi Tiết 
               </button>
             </td>
           </tr>
@@ -62,124 +62,158 @@
       </p-table>
 
       <p-dialog
-        [(visible)]="displayDialog"
-        [style]="{ width: '1000px' }"
-        class="d-flex"
-        header="Quản lý sinh viên trong lớp"
-        [modal]="true"
-        styleClass="p-fluid"
-      >
-        <ng-template pTemplate="content">
-          <div class="p-grid d-flex">
-            <div class="p-col-6">
-              <h3>Danh sách tất cả sinh viên</h3>
-              <div class="p-inputgroup">
-                <input
-                  pInputText
-                  type="text"
-                  placeholder="Tìm kiếm sinh viên"
-                  [(ngModel)]="searchAllStudents"
-                />
-                <button
-                  pButton
-                  icon="pi pi-search"
-                  class="p-button-outlined"
-                  (click)="searchAllStudentsFn()"
-                ></button>
-              </div>
-              <p-table
-                [value]="ListStudent"
-                [paginator]="true"
-                [rows]="5"
-                selectionMode="single"
-                [(selection)]="selectedStudent"
-              >
-                <ng-template pTemplate="header">
-                  <tr>
-                    <th>Mã SV</th>
-                    <th>Họ tên</th>
-                    <th>Hành động</th>
-                  </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-student>
-                  <tr>
-                    <td>{{ student.id }}</td>
-                    <td>{{ student.fullName }}</td>
-                    <td>
-                      <button
-                        pButton
-                        label="Thêm"
-                        icon="pi pi-plus"
-                        class="p-button-success"
-                        (click)="addStudentToClass(student.id)"
-                      ></button>
-                    </td>
-                  </tr>
-                </ng-template>
-              </p-table>
-            </div>
+  [(visible)]="displayDialog"
+  [style]="{ width: '800px' }"
+  class="d-flex"
+  header="Quản lý sinh viên trong lớp"
+  [modal]="true"
+  styleClass="p-fluid"
+>
+  <div class="container d-flex" style="width: 800px; justify-items: auto;">
+    <span>Tên Lớp: <strong>{{SchoolClassItem.code}}</strong></span>
+    <div class="p-field">
+      <label for="student">Max Student</label>
+      <input
+        id="student"
+        pInputText
+        type="number"
+        [(ngModel)]="SchoolClassItem.maxStudents"
+        required
+      />
+    </div>
+    <div class="p-field p-col-6" style="flex: 1">
+      <label for="teacher">Chọn giáo viên chủ nghiệm</label>
+      <p-dropdown
+        id="teacher"
+        [options]="Teachers"
+        [(ngModel)]="selectedTeacher"
+        placeholder="Chọn giáo viên chủ nghiệm"
+        optionLabel="fullName"
+        optionValue="id"
+        [style]="{ width: '100%' }"
 
-            <div class="p-col-6">
-              <h3>Sinh viên trong lớp</h3>
-              <div class="p-inputgroup">
-                <input
-                  pInputText
-                  type="text"
-                  placeholder="Tìm kiếm sinh viên"
-                  [(ngModel)]="searchClassStudents"
-                />
-                <button
-                  pButton
-                  icon="pi pi-search"
-                  class="p-button-outlined"
-                  (click)="searchClassStudentsFn()"
-                ></button>
-              </div>
-              <p-table
-                [value]="Student_Class"
-                [paginator]="true"
-                [rows]="5"
-                selectionMode="single"
-                [(selection)]="selectedClassStudent"
-              >
-                <ng-template pTemplate="header">
-                  <tr>
-                    <th>Mã SV</th>
-                    <th>Họ tên</th>
-                    <th>Hành động</th>
-                  </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-student>
-                  <tr>
-                    <td>{{ student.id }}</td>
-                    <td>{{ student.fullName }}</td>
-                    <td>
-                      <button
-                        pButton
-                        label="Xóa"
-                        icon="pi pi-times"
-                        class="p-button-danger"
-                        (click)="removeStudentFromClass(student.id)"
-                      ></button>
-                    </td>
-                  </tr>
-                </ng-template>
-              </p-table>
-            </div>
-          </div>
-        </ng-template>
-
-        <ng-template pTemplate="footer">
+      ></p-dropdown>
+    </div>
+  </div>
+  <ng-template pTemplate="content">
+    <div class="p-grid d-flex">
+      <div class="p-col-6">
+        <h3>Danh sách tất cả sinh viên</h3>
+        <div class="p-inputgroup">
+          <input
+            pInputText
+            type="text"
+            placeholder="Tìm kiếm sinh viên"
+            [(ngModel)]="searchAllStudents"
+          />
           <button
             pButton
-            pRipple
-            label="Đóng"
-            icon="pi pi-times"
-            class="p-button-text"
-            (click)="displayDialog = false"
+            icon="pi pi-search"
+            class="p-button-outlined"
+            (click)="searchAllStudentsFn()"
           ></button>
-        </ng-template>
-      </p-dialog>
+        </div>
+        <p-table
+          [value]="ListStudent"
+          [paginator]="true"
+          [rows]="5"
+          selectionMode="single"
+          [(selection)]="selectedStudent"
+        >
+          <ng-template pTemplate="header">
+            <tr>
+              <th>Mã SV</th>
+              <th>Họ tên</th>
+              <th>Hành động</th>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-student>
+            <tr>
+              <td>{{ student.id }}</td>
+              <td>{{ student.fullName }}</td>
+              <td>
+                <button
+                  pButton
+                  label="Thêm"
+                  icon="pi pi-plus"
+                  class="p-button-success"
+                  (click)="addStudentToClass(student.id)"
+                ></button>
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
+      <div class="p-col-6">
+        <h3>Sinh viên trong lớp</h3>
+        <div class="p-inputgroup">
+          <input
+            pInputText
+            type="text"
+            placeholder="Tìm kiếm sinh viên"
+            [(ngModel)]="searchClassStudents"
+          />
+          <button
+            pButton
+            icon="pi pi-search"
+            class="p-button-outlined"
+            (click)="searchClassStudentsFn()"
+          ></button>
+        </div>
+        <p-table
+          [value]="Student_Class"
+          [paginator]="true"
+          [rows]="5"
+          selectionMode="single"
+          [(selection)]="selectedClassStudent"
+        >
+          <ng-template pTemplate="header">
+            <tr>
+              <th>Mã SV</th>
+              <th>Họ tên</th>
+              <th>Hành động</th>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-student>
+            <tr>
+              <td>{{ student.id }}</td>
+              <td>{{ student.fullName }}</td>
+              <td>
+                <button
+                  pButton
+                  label="Xóa"
+                  icon="pi pi-times"
+                  class="p-button-danger"
+                  (click)="removeStudentFromClass(student.id)"
+                ></button>
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
+    </div>
+  </ng-template>
+
+  <ng-template pTemplate="footer">
+    <button
+      pButton
+      pRipple
+      label="Lưu"
+      icon="pi pi-save"
+      class="p-button-success"
+      (click)="saveClassInfo()"
+    ></button>
+    <button
+      pButton
+      pRipple
+      label="Đóng"
+      icon="pi pi-times"
+      class="p-button-text"
+      (click)="displayDialog = false"
+    ></button>
+  </ng-template>
+</p-dialog>
+
     </div>
   </div>
 </div>
